--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "nfq-techtalk",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "start": "nx run-many -t start -p basic-sample delay-sample"
+  },
   "private": true,
   "dependencies": {},
   "devDependencies": {
