--- a/packages/basic-sample/package.json
+++ b/packages/basic-sample/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "start": "concurrently 'npm:serve:*' --raw",
+    "start": "http-server -g -p 8081",
+    "dev": "concurrently 'npm:serve:*' --raw",
     "serve:theme": "http-server -g",
     "serve:scss": "gulp watch",
     "test": "http-server -g -f ./test.html",
