--- a/packages/delay-sample/package.json
+++ b/packages/delay-sample/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "basic-sample",
+  "name": "delay-sample",
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "start": "concurrently 'npm:serve:*' --raw",
+    "start": "http-server -g -p 8080",
+    "dev": "concurrently 'npm:serve:*' --raw",
     "serve:theme": "http-server -g",
     "serve:scss": "gulp watch",
     "test": "http-server -g -f ./test.html",
